# Machine-Learning

./: .dockerignore  .gitignore  Dockerfile  README.md  requirements-dev.txt
.github/workflows/: cd.yml  ci.yml
notebooks/: credit_risk_modeling_walkthrough.ipynb
predict credit risk/: requirements.txt
predict credit risk/.github/workflows/: cd.yml
predict credit risk/notebooks/: credit_risk_modeling_walkthrough.ipynb
predict credit risk/tests/: test_data_cleaning.py
predict_credit_risk/: README.md  api.py  inference.py  pyproject.toml  requirements.txt  training.py
predict_credit_risk/predict_credit_risk/: __init__.py
predict_credit_risk/static/: index.html
scripts/: inspect_dataset.py
